@@ -18,9 +18,9 @@ package org.apache.solr.analytics.function.mapping;
 
 import java.time.Instant;
 import java.time.format.DateTimeParseException;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.Iterator;
+import java.util.List;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.analytics.value.AnalyticsValueStream;
 import org.apache.solr.analytics.value.DateValue;
@@ -53,13 +53,13 @@ public class DateParseFunctionTest extends SolrTestCaseJ4 {
 
     // Value exists
     val.setValue(date1.getTime()).setExists(true);
-    assertEquals(date1, func.getDate());
+    assertEquals(date1.toInstant(), func.getDate().toInstant());
     assertTrue(func.exists());
     assertEquals(date1.getTime(), func.getLong());
     assertTrue(func.exists());
 
     val.setValue(date2.getTime()).setExists(true);
-    assertEquals(date2, func.getDate());
+    assertEquals(date2.toInstant(), func.getDate().toInstant());
     assertTrue(func.exists());
     assertEquals(date2.getTime(), func.getLong());
     assertTrue(func.exists());
@@ -104,13 +104,13 @@ public class DateParseFunctionTest extends SolrTestCaseJ4 {
 
     // Value exists
     val.setValue("1800-01-01T10:30:15Z").setExists(true);
-    assertEquals(date1, func.getDate());
+    assertEquals(date1.toInstant(), func.getDate().toInstant());
     assertTrue(func.exists());
     assertEquals(date1.getTime(), func.getLong());
     assertTrue(func.exists());
 
     val.setValue("1920-04-15T18:15:45Z").setExists(true);
-    assertEquals(date2, func.getDate());
+    assertEquals(date2.toInstant(), func.getDate().toInstant());
     assertTrue(func.exists());
     assertEquals(date2.getTime(), func.getLong());
     assertTrue(func.exists());
@@ -132,23 +132,23 @@ public class DateParseFunctionTest extends SolrTestCaseJ4 {
     val.setValues();
     func.streamDates(
         value -> {
-          assertTrue("There should be no values to stream", false);
+          fail("There should be no values to stream");
         });
     func.streamLongs(
         value -> {
-          assertTrue("There should be no values to stream", false);
+          fail("There should be no values to stream");
         });
 
     // One value
     val.setValues(date1.getTime());
-    Iterator<Date> values1 = Arrays.asList(date1).iterator();
+    Iterator<Date> values1 = List.of(date1).iterator();
     func.streamDates(
         value -> {
           assertTrue(values1.hasNext());
-          assertEquals(values1.next(), value);
+          assertEquals(values1.next().toInstant(), value.toInstant());
         });
     assertFalse(values1.hasNext());
-    Iterator<Long> times1 = Arrays.asList(date1.getTime()).iterator();
+    Iterator<Long> times1 = List.of(date1.getTime()).iterator();
     func.streamLongs(
         value -> {
           assertTrue(times1.hasNext());
@@ -158,15 +158,14 @@ public class DateParseFunctionTest extends SolrTestCaseJ4 {
 
     // Multiple values
     val.setValues(date1.getTime(), date2.getTime(), date3.getTime());
-    Iterator<Date> values2 = Arrays.asList(date1, date2, date3).iterator();
+    Iterator<Date> values2 = List.of(date1, date2, date3).iterator();
     func.streamDates(
         value -> {
           assertTrue(values2.hasNext());
-          assertEquals(values2.next(), value);
+          assertEquals(values2.next().toInstant(), value.toInstant());
         });
     assertFalse(values2.hasNext());
-    Iterator<Long> times2 =
-        Arrays.asList(date1.getTime(), date2.getTime(), date3.getTime()).iterator();
+    Iterator<Long> times2 = List.of(date1.getTime(), date2.getTime(), date3.getTime()).iterator();
     func.streamLongs(
         value -> {
           assertTrue(times2.hasNext());
@@ -191,54 +190,54 @@ public class DateParseFunctionTest extends SolrTestCaseJ4 {
     val.setValues();
     func.streamDates(
         value -> {
-          assertTrue("There should be no values to stream", false);
+          fail("There should be no values to stream");
         });
     func.streamLongs(
         value -> {
-          assertTrue("There should be no values to stream", false);
+          fail("There should be no values to stream");
         });
 
     // Incorrect value
     val.setValues("10:30:15Z");
     func.streamDates(
         value -> {
-          assertTrue("There should be no values to stream", false);
+          fail("There should be no values to stream");
         });
     func.streamLongs(
         value -> {
-          assertTrue("There should be no values to stream", false);
+          fail("There should be no values to stream");
         });
 
     val.setValues("01-33T10:30:15Z");
     func.streamDates(
         value -> {
-          assertTrue("There should be no values to stream", false);
+          fail("There should be no values to stream");
         });
     func.streamLongs(
         value -> {
-          assertTrue("There should be no values to stream", false);
+          fail("There should be no values to stream");
         });
 
     val.setValues("1800-01T30:30:15Z");
     func.streamDates(
         value -> {
-          assertTrue("There should be no values to stream", false);
+          fail("There should be no values to stream");
         });
     func.streamLongs(
         value -> {
-          assertTrue("There should be no values to stream", false);
+          fail("There should be no values to stream");
         });
 
     // One value
     val.setValues("1800-01-01T10:30:15Z");
-    Iterator<Date> values1 = Arrays.asList(date1).iterator();
+    Iterator<Date> values1 = List.of(date1).iterator();
     func.streamDates(
         value -> {
           assertTrue(values1.hasNext());
-          assertEquals(values1.next(), value);
+          assertEquals(values1.next().toInstant(), value.toInstant());
         });
     assertFalse(values1.hasNext());
-    Iterator<Long> times1 = Arrays.asList(date1.getTime()).iterator();
+    Iterator<Long> times1 = List.of(date1.getTime()).iterator();
     func.streamLongs(
         value -> {
           assertTrue(times1.hasNext());
@@ -248,15 +247,14 @@ public class DateParseFunctionTest extends SolrTestCaseJ4 {
 
     // Multiple values
     val.setValues("1800-01-01T10:30:15Z", "1920-04-15T18:15:45Z", "2012-11-30T20:30:15Z");
-    Iterator<Date> values2 = Arrays.asList(date1, date2, date3).iterator();
+    Iterator<Date> values2 = List.of(date1, date2, date3).iterator();
     func.streamDates(
         value -> {
           assertTrue(values2.hasNext());
-          assertEquals(values2.next(), value);
+          assertEquals(values2.next().toInstant(), value.toInstant());
         });
     assertFalse(values2.hasNext());
-    Iterator<Long> times2 =
-        Arrays.asList(date1.getTime(), date2.getTime(), date3.getTime()).iterator();
+    Iterator<Long> times2 = List.of(date1.getTime(), date2.getTime(), date3.getTime()).iterator();
     func.streamLongs(
         value -> {
           assertTrue(times2.hasNext());
